fixed navbar wrap

--- a/style.css
+++ b/style.css
@@ -68,7 +68,6 @@ body {
 	user-select: none;
 	display: flex;
 	justify-content: center;
-	flex-wrap: wrap;
 	gap: 2.5rem;
 
 	padding-block: 1rem;
